<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".features.movieDetail.MovieDetailActivity">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:visibility="visible"
            android:id="@+id/scrollView">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/constraintLayout">

                    <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginTop="24dp"
                            android:layout_marginStart="24dp"
                            app:cardCornerRadius="6dp"
                            android:id="@+id/cardImage">
                        <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                            <ImageView
                                    android:layout_width="120dp"
                                    android:layout_height="150dp"
                                    app:srcCompat="@drawable/ic_baseline_album_24px"
                                    android:id="@+id/imageMovie"
                                    android:scaleType="centerCrop"
                                    tools:ignore="ContentDescription"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintBottom_toBottomOf="parent"/>
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>
                    <TextView
                            android:id="@+id/textTitle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:text="Spider-Man: Into the Spider-Verse "
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/cardImage"
                            android:layout_marginStart="8dp"
                            app:layout_constraintTop_toTopOf="@+id/cardImage"
                            android:layout_marginEnd="24dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textPublishAt" tools:text="(2018)"
                            app:layout_constraintTop_toBottomOf="@+id/textTitle"
                            android:layout_marginTop="8dp"
                            app:layout_constraintStart_toEndOf="@+id/cardImage"
                            android:layout_marginStart="8dp"/>
                    <TextView
                            android:text="@string/text_language"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textLanguage"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            app:layout_constraintTop_toBottomOf="@+id/textPublishAt"
                            app:layout_constraintStart_toEndOf="@+id/cardImage"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"/>
                    <TextView
                            android:id="@+id/textValueLanguage"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:textSize="12sp"
                            android:maxLines="2"
                            tools:text="ilga yulian"
                            app:layout_constraintTop_toBottomOf="@+id/textLanguage"
                            app:layout_constraintStart_toStartOf="@+id/textPublishAt"
                            android:layout_marginTop="8dp" android:layout_marginEnd="24dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/cardImage"/>
            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/cardImage"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:cardCornerRadius="4dp"
                    android:id="@+id/cardOverview">
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <TextView
                            android:text="@string/text_overview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textTitleOverview"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@color/black"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="16dp"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="16dp"/>
                    <TextView
                            android:id="@+id/textValueOverview"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:textSize="12sp"
                            tools:text='Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension'
                            app:layout_constraintTop_toBottomOf="@+id/textTitleOverview"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="16dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="16dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginTop="16dp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardPrice"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:visibility="gone"
                app:cardCornerRadius="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardOverview">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textTitleBudget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/text_budget"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textValueBudget"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="24dp"
                        android:ellipsize="end"
                        android:gravity="end"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@+id/textTitleBudget"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textTitleBudget"
                        app:layout_constraintTop_toTopOf="@+id/textTitleBudget"
                        tools:text="Rp.1.000.000" />

                    <TextView
                        android:id="@+id/textTitleRevenue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/text_revenue"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textTitleBudget" />

                    <TextView
                        android:id="@+id/textValueRevenue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="24dp"
                        android:ellipsize="end"
                        android:gravity="end"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@+id/textTitleRevenue"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textTitleBudget"
                        app:layout_constraintTop_toTopOf="@+id/textTitleRevenue"
                        tools:text="Rp.1.000.000" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/cardPrice"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp" app:cardCornerRadius="4dp" android:id="@+id/cardValueOfMovie"
                    android:layout_marginTop="16dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <FrameLayout
                        android:id="@+id/frameVote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textVoteAverage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/text_vote"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/textValueVoteAverage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginBottom="16dp"
                                android:textSize="22sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/textVoteAverage"
                                tools:text="293.231" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </FrameLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>